<resources>
    <string name="app_name">Application_Day01</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <string name="welcomeLabel">Welcome</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
</resources>